--- a/app/views/posts/show.html.slim
+++ b/app/views/posts/show.html.slim
@@ -114,7 +114,7 @@
                 p.name 名無しのリライアーさん
                 / p.name = fc.username
             .free-post-msg
-              p.post-content お前の作品好きだわ、なんていうかさ、良いんだよね〜なんでだろい
+              p.post-content お前の作品好きだわ、なんていうかさ、良いんだよね〜なんでだろう、、
               / p.post-content = fc.content
               p.time 5分前
               / = "#{time_ago_in_words(fc.created_at)}前"
