style: content部分のCSSを調整

--- a/app/views/posts/show.html.slim
+++ b/app/views/posts/show.html.slim
@@ -458,6 +458,10 @@ css:
     color: #444;
   }
 
+  .free-post-msg {
+    margin-right: 6%;
+  }
+
   .free-post-msg .post-content {
     font-size: 0.88rem;
     color: #333;
