feat: 思いがけず、レスポンシブも出来てしまった

--- a/app/views/posts/show.html.slim
+++ b/app/views/posts/show.html.slim
@@ -671,4 +671,22 @@ css:
     .post-sub-user-name p {
       font-size: 0.95rem;
     }
+
+    .free-post-log {
+      width: 280px;
+    }
+
+    .free-post-contents {
+      margin-top: 6%;
+      margin-bottom: 9%;
+    }
+
+    .post-show-free-post-form .free-form input[type="text"] {
+      width: 244px;
+      margin-bottom: 2%;
+    }
+
+    .post-show-free-post-form {
+      margin-bottom: 18%;
+    }
   }
