feat: html構造を追加

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -201,6 +201,24 @@ a:hover {
   margin-top: 0.6%;
 }
 
+// PASSWORD WASURE
+.forget-password-title {
+  text-align: center;
+}
+
+.forget-password-desc {
+  text-align: center;
+}
+
+.forget-password-form {
+  text-align: center;
+  margin: 0 auto;
+  background-image: url(books.jpg);
+  color: #fff;
+  padding-top: 6%;
+  padding-bottom: 23%;
+}
+
 // HOMW TOP(ROOT PATH)
 .bg-top {
   background-image: url(books.jpg);
