--- a/app/views/devise/passwords/new.html.slim
+++ b/app/views/devise/passwords/new.html.slim
@@ -1,16 +1,18 @@
-h2
-  | パスワードをお忘れですか？
+.forget-password-title
+  h2
+    | パスワードをお忘れですか？
 
 .forget-password-desc
   p
     | 設定していたメールアドレスを入力すればパスワードを再設定できます
 
-= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f|
-  = render "devise/shared/error_messages", resource: resource
-  .field.devise-field
-    = f.label :email
-    br
-    = f.email_field :email, autofocus: true, autocomplete: "email"
-  .actions
-    = f.submit "送信"
-= render "devise/shared/links"
+  .forget-password-form
+    = form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f|
+      = render "devise/shared/error_messages", resource: resource
+      .field.devise-field
+        = f.label :email
+        br
+        = f.email_field :email, autofocus: true, autocomplete: "email"
+      .actions
+        = f.submit "送信"
+    = render "devise/shared/links"
