--- a/app/views/home/top.html.slim
+++ b/app/views/home/top.html.slim
@@ -41,6 +41,8 @@ section.top-container
   .top-ranking-wrapper
     .top-ranking-title
       h2 おすすめ作品
+    .top-ranking-more-link
+      p = link_to ">もっとみる", recommend_posts_path
     .top-ranking.over-flow
       - @ranking_posts.each do |post|
         .ranking-content
