--- a/app/views/home/top.html.slim
+++ b/app/views/home/top.html.slim
@@ -53,10 +53,11 @@ section.top-container
           p.top-post-link = link_to "詳細をみる", post
   // 新着作品
   .top-new-arrival-wrapper
-    .top-new-arrival-title
-      h2 新着作品
-    .top-new-arrival-more-link
-      p = link_to ">もっとみる", new_arrival_posts_path
+    .top-new-arrival-top
+      .top-new-arrival-title
+        h2 新着作品
+      .top-new-arrival-more-link
+        p = link_to ">もっとみる", new_arrival_posts_path
     .top-new-arrival.over-flow
       - @new_arrival_posts.each do |post|
         .new-arrival-content
