--- a/app/views/recommend_posts/index.html.slim
+++ b/app/views/recommend_posts/index.html.slim
@@ -1,1 +1,8 @@
+= provide(:title, "おすすめ作品")
 
+section.recommend-posts-container
+  .ranking-top-wrapper
+    .ranking-top-title
+      h2 今月のトップランキング（仮）
+    .ranking-top-contents
+      p 準備中です...ごめんねm(__)m
