--- a/app/views/new_arrival_posts/index.html.slim
+++ b/app/views/new_arrival_posts/index.html.slim
@@ -1,1 +1,8 @@
-h2 new_arrival_posts
+= provide(:title, "おすすめ作品")
+
+section.new-arrival-posts-container
+  .new-arrival-top-wrapper
+    .new-arrival-top-title
+      h2 新着作品（仮）
+    .new-arrival-top-contents
+      p 準備中です...ごめんねm(__)m
