--- a/app/views/posts/show.html.slim
+++ b/app/views/posts/show.html.slim
@@ -64,6 +64,9 @@
             p = "#{time_ago_in_words(micropost.created_at)}前"
             - if user_signed_in? && micropost.user_id == current_user.id
               p = link_to "・削除", [@post, micropost], method: :delete, data: { confirm: '削除?' }
+          .post-log-star
+            p star
+            p = link_to'押せる', post_micropost_micropost_stars_path(post_id: @post.id, micropost_id: micropost.id), method: :post
       .post-add
         // 1行作業
         .micropost-form
