feat: ヘルパーを追加、9999+を表現

--- a/app/views/posts/show.html.slim
+++ b/app/views/posts/show.html.slim
@@ -65,8 +65,8 @@
             - if user_signed_in? && micropost.user_id == current_user.id
               p = link_to "・削除", [@post, micropost], method: :delete, data: { confirm: '削除?' }
           .post-log-star
-            p = "#{micropost.star_count}star"
-            p = link_to'押せる', post_micropost_micropost_stars_path(post_id: @post.id, micropost_id: micropost.id), method: :post
+            p = link_to'押せるstar', post_micropost_micropost_stars_path(post_id: @post.id, micropost_id: micropost.id), method: :post
+            p = micropost_star_count(micropost)
       .post-add
         // 1行作業
         .micropost-form
