feat: starの表示位置調整

--- a/app/views/posts/show.html.slim
+++ b/app/views/posts/show.html.slim
@@ -60,14 +60,14 @@
             .post-log-content
               p.name = link_to "#{micropost.user.name}", "/users/#{micropost.user_id}"
               p.micro = micropost.content
+            .post-log-star
+              p = link_to post_micropost_micropost_stars_path(post_id: @post.id, micropost_id: micropost.id), method: :post do
+                i.far.fa-star.fa-lg.star-color
+              p.star-p = micropost_star_count(micropost)
           .post-log-info
             p = "#{time_ago_in_words(micropost.created_at)}前"
             - if user_signed_in? && micropost.user_id == current_user.id
               p = link_to "・削除", [@post, micropost], method: :delete, data: { confirm: '削除?' }
-          .post-log-star
-            p = link_to post_micropost_micropost_stars_path(post_id: @post.id, micropost_id: micropost.id), method: :post do
-              i.far.fa-star.fa-lg.star-color
-            p.star-p = micropost_star_count(micropost)
       .post-add
         // 1行作業
         .micropost-form
@@ -137,7 +137,9 @@ css:
   }
 
   .star-p {
+    font-size: 0.88rem;
     color: #ffcc33;
+    text-align: center;
   }
 
   .post-show-top {
@@ -300,6 +302,10 @@ css:
   .post-log-content p a:hover {
     color: #0a9dd1;
     transition: .3s;
+  }
+
+  .post-log-star {
+    margin-left: 5%;
   }
 
   .post-log .post-log-info {
