--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -496,6 +496,31 @@ a:hover {
   margin: 0 1%;
 }
 
+// LP PAGE
+
+.bg-lp {
+  background-image: url(lp-top.jpg);
+  opacity: .8;
+  background-position: center center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  width: 100%;
+  height: 650px;
+}
+
+.lp-bg-title {
+  text-align: center;
+  padding-top: 14%;
+}
+
+.lp-bg-title h2 {
+  font-size: 3.75rem;
+  font-family: "Sawarabi Mincho";
+  color: rgb(248, 244, 244);
+  letter-spacing: 2px;
+  text-shadow: 1px 2px 3px #333;
+}
+
 @media screen and (max-width: 480px) {
 
   .bg-top {
