--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -10,6 +10,7 @@ html
     meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
     link href="https://fonts.googleapis.com/css?family=Sawarabi+Gothic" rel="stylesheet"
     link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet"
+    link href="https://fonts.googleapis.com/css?family=Sawarabi+Mincho" rel="stylesheet"
   body
     - unless current_page?(root_path)
       = render 'layouts/header'
