--- a/app/views/static/lp.html.slim
+++ b/app/views/static/lp.html.slim
@@ -10,7 +10,7 @@ section.lp-welcome
   .lp-welcome-title
     h3 RELIERへようこそ
   .lp-welcome-content
-    p RELIER（リライア）にお越しいただきありがとうございます。<br>
+    p この度はRELIER（リライア）にお越しいただきありがとうございます。<br>
       このサイトでは「1行小説リレー」というものを遅べます。<br>
       <br>
       このページでは、そんな1行小説リレーの魅力を皆さんにお伝えします。
