--- a/app/views/static/lp.html.slim
+++ b/app/views/static/lp.html.slim
@@ -15,13 +15,13 @@ section.lp-welcome
       <br>
       このページでは、そんな1行小説リレーの魅力を皆さんにお伝えします。
 br
-br
-section.lp-movie
-  .lp-movie-title
-    h3 紹介動画
-  .lp-movie-content
-    img src="#"
-br
+/ br
+/ section.lp-movie
+/   .lp-movie-title
+/     h3 紹介動画
+/   .lp-movie-content
+/     img src="#"
+/ br
 br
 section.lp-main
   .lp-main-title
