--- a/app/views/static/lp.html.slim
+++ b/app/views/static/lp.html.slim
@@ -2,12 +2,12 @@
 
 section.bg-lp
   .lp-container
-    .lp-bg-title
+    .lp-bg-title.lp-title
       h2 Connect your imagination
 br
 br
 section.lp-welcome
-  .lp-welcome-title
+  .lp-welcome-title.lp-title
     h3 RELIERへようこそ
   .lp-welcome-content
     p この度はRELIER（リライア）にお越しいただきありがとうございます。<br>
@@ -24,7 +24,7 @@ br
 / br
 br
 section.lp-main
-  .lp-main-title
+  .lp-main-title.lp-title
     h3 遊び方の紹介
   .lp-main-contents
     .lp-main-content
@@ -53,7 +53,7 @@ section.lp-main
 br
 br
 section.lp-dev
-  .lp-dev-title
+  .lp-dev-title.lp-title
     h3 開発者
   .lp-dev-content
     .lp-dev-img
@@ -67,7 +67,7 @@ section.lp-dev
 br
 br
 section.lp-action
-  .lp-action-title
+  .lp-action-title.lp-title
     h3 さあ、今すぐはじめよう！
   .lp-action-button
     = link_to '新規登録', '/users/sign_up'
