feat: 各タイトルのボーダー

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -558,6 +558,15 @@ a:hover {
   display: inline-block;
 }
 
+.lp-dev-title h3 {
+  border-bottom: #A16EFF solid 2.5px;
+  display: inline-block;
+}
+
+.lp-action-title h3 {
+  border-bottom: #ffcc33 solid 2.5px;
+  display: inline-block;
+}
 
 
 @media screen and (max-width: 480px) {
