--- a/app/views/static/lp.html.slim
+++ b/app/views/static/lp.html.slim
@@ -70,4 +70,4 @@ section.lp-action
   .lp-action-title.lp-title
     h3 さあ、今すぐはじめよう！
   .lp-action-button
-    = link_to '新規登録', '/users/sign_up'
+    = link_to '新規登録画面へ', '/users/sign_up'
