--- a/app/views/static/lp.html.slim
+++ b/app/views/static/lp.html.slim
@@ -61,9 +61,9 @@ section.lp-dev
     .lp-dev-p
       h4 ハラカズ
       .dev-messages
-        p 個人事業主のITエンジニア。
+        p ITエンジニア。
         p 好きな食べ物はチキン南蛮と寿司。
-        p 秋葉原好きの日本を代表する正統派オタク。
+        p 秋葉原好き。
 br
 br
 section.lp-action
