lp-devもいいんじゃね

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -582,12 +582,26 @@ a:hover {
   line-height: 26px;
 }
 
+.lp-dev {
+  margin-top: 6%;
+  text-align: center;
+}
+
+.lp-dev-title {
+  margin-bottom: 3%;
+}
+
 .lp-dev-title h3 {
   border-bottom: #A16EFF solid 2.5px;
   display: inline-block;
 }
 
+.dev-messages {
+  margin-top: 1.5%;
+}
+
 .lp-action {
+  margin-top: 6%;
   text-align: center;
 }
 
