--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -749,6 +749,10 @@ a:hover {
     font-size: 1.25rem;
   }
 
+  .lp-main-contents h4 {
+    font-size: 0.98rem;
+  }
+
   .bg-lp {
     height: 450px;
   }
@@ -759,5 +763,44 @@ a:hover {
 
   .lp-welcome {
     margin-top: 5%;
+    margin-bottom: 10%;
+  }
+
+  .lp-welcome-content p {
+    margin-top: 6%;
+    font-size: 1rem;
+    margin-left: 4%;
+    margin-right: 4%;
+  }
+
+  .lp-main-content {
+    margin-top: 9.5%;
+  }
+
+  .main-content-p {
+    margin-left: 4%;
+    margin-right: 4%;
+  }
+
+  .main-content-p p {
+    font-size: 0.92rem;
+  }
+
+  .dev-messages {
+    font-size: 0.92rem;
+  }
+
+  .lp-action {
+    margin-top: 16%;
+  }
+
+  .lp-action-button {
+    margin-top: 10%;
+    margin-bottom: 32%;
+  }
+
+  .lp-action-button a {
+    padding: 13px 25px;
+    font-size: 1.02rem;
   }
 }
