feat: コメント追加

--- a/app/views/posts/show.html.slim
+++ b/app/views/posts/show.html.slim
@@ -118,6 +118,7 @@
                 .free-post-msg
                   p.post-content = fc.content
                   p.time = "#{time_ago_in_words(fc.created_at)}前"
+                / ここにスター
           - else
             p.not-free-post このスペースは誰でも自由に書き込むことが出来ます
     // フリーコメントの作成フォーム
