--- a/app/views/posts/show.html.slim
+++ b/app/views/posts/show.html.slim
@@ -118,7 +118,7 @@
                 .free-post-msg
                   p.post-content = fc.content
                   p.time = "#{time_ago_in_words(fc.created_at)}前"
-                / ここにスター
+                / フリーコメントのスター
                 .free-post-star
                   / p = link_to post_micropost_micropost_stars_path(post_id: @post.id, micropost_id: micropost.id), method: :post do
                   i.far.fa-star.fa-lg.star-color
