fix: 間違えたー！（タケムラ風の喋り方）

--- a/app/views/home/top.html.slim
+++ b/app/views/home/top.html.slim
@@ -18,7 +18,7 @@ section.bg-top
     .search
       form
         input type="search" placeholder="タイトル名、ジャンルで検索"
-        input "検索", type="submit"
+        input value="検索" type="submit"
 
 section.top-container
   - unless user_signed_in?
