feat: TOPページの「>もっとみる」がスマホだと明後日の方向にある

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -710,6 +710,10 @@ a:hover {
     text-align: center;
   }
 
+  .top-ranking-more-link {
+    margin-top: 30%;
+  }
+
   .top-ranking {
     margin-left: 7%;
   }
@@ -730,6 +734,10 @@ a:hover {
   .top-new-arrival-title h2 {
     font-size: 1.6rem;
     text-align: center;
+  }
+
+  .top-new-arrival-more-link {
+    margin-top: 46%;
   }
 
   .top-new-arrival {
