refactor: 細かい修正

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -219,7 +219,7 @@ a:hover {
   padding-bottom: 23%;
 }
 
-// HOMW TOP(ROOT PATH)
+// HOME TOP(ROOT PATH)
 .bg-top {
   background-image: url(books.jpg);
   opacity: .9;
