refactor: lpのレスポンシっぶcss定義移動なんだからね！

--- a/app/views/static/lp.html.slim
+++ b/app/views/static/lp.html.slim
@@ -192,3 +192,64 @@ css:
     opacity: .8;
     transition: .3s;
   }
+
+  @media screen and (max-width: 480px) {
+    .lp-title {
+      font-size: 1.25rem;
+    }
+
+    .lp-main-contents h4 {
+      font-size: 0.98rem;
+    }
+
+    .bg-lp {
+      height: 450px;
+    }
+
+    .lp-bg-title h2 {
+      font-size: 3.4rem;
+    }
+
+    .lp-welcome {
+      margin-top: 5%;
+      margin-bottom: 10%;
+    }
+
+    .lp-welcome-content p {
+      margin-top: 6%;
+      font-size: 1rem;
+      margin-left: 4%;
+      margin-right: 4%;
+    }
+
+    .lp-main-content {
+      margin-top: 9.5%;
+    }
+
+    .main-content-p {
+      margin-left: 4%;
+      margin-right: 4%;
+    }
+
+    .main-content-p p {
+      font-size: 0.92rem;
+    }
+
+    .dev-messages {
+      font-size: 0.92rem;
+    }
+
+    .lp-action {
+      margin-top: 16%;
+    }
+
+    .lp-action-button {
+      margin-top: 10%;
+      margin-bottom: 32%;
+    }
+
+    .lp-action-button a {
+      padding: 13px 25px;
+      font-size: 1.02rem;
+    }
+  }
