feat: 重要な変更

--- a/app/views/posts/show.html.slim
+++ b/app/views/posts/show.html.slim
@@ -126,7 +126,7 @@
                   .free-post-star
                     / p = link_to post_micropost_micropost_stars_path(post_id: @post.id, micropost_id: micropost.id), method: :post do
                     i.far.fa-star.fa-lg.star-color
-                    p.star-p 12
+                    p.star-p 仮
                     / TODO: 本来の姿
                     / p.star-p = micropost_star_count(micropost)
           - else
