--- a/app/views/posts/edit.html.slim
+++ b/app/views/posts/edit.html.slim
@@ -6,8 +6,12 @@
 
   = render 'form'
 
-  .relay-stop-button
-    = link_to 'リレーを停止する', closed_post_path(@post), method: :patch, data: { confirm: "本当にリレーを停止してもよろしいですか？" }
+  - if @post.closed
+    .relay-start-button
+      = link_to 'リレーを開始する', "#"
+  - else
+    .relay-stop-button
+      = link_to 'リレーを停止する', closed_post_path(@post), method: :patch, data: { confirm: "本当にリレーを停止してもよろしいですか？" }
 
 css:
   .relay-stop-button {
@@ -24,6 +28,24 @@ css:
   }
 
   .relay-stop-button a:hover {
+    transition: 0.3s;
+    opacity: 0.7;
+  }
+
+  .relay-start-button {
+    margin-top: 5%;
+    text-align: center;
+  }
+
+  .relay-start-button a {
+    background-color: #009900;
+    color: rgb(244, 243, 243);
+    padding: 12px 28px;
+    border-radius: 4px;
+    transition: 0.3s;
+  }
+
+  .relay-start-button a:hover {
     transition: 0.3s;
     opacity: 0.7;
   }
