--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -264,6 +264,19 @@ a:hover {
   height: 650px;
 }
 
+/* icon */
+.fas {
+  padding: 2% 0;
+}
+
+.fa-book-open {
+  color: #009900;
+}
+
+.fa-window-close {
+  color: #cc3333;
+}
+
 
 @media screen and (max-width: 480px) {
   .bg-top {
