refactor: コメントを追加

--- a/app/views/home/top.html.slim
+++ b/app/views/home/top.html.slim
@@ -49,6 +49,7 @@ section.top-container
         .ranking-content
           .top-post-img
             = link_to image_tag("no_image_book.jpg"), post
+          / リレーの状態
           - unless post.closed
             i.fas.fa-book-open.fa-lg
           - else
@@ -71,6 +72,7 @@ section.top-container
                 = image_tag(post.image.url)
               - else
                 = image_tag("no_image_book.jpg")
+          / リレーの状態
           - unless post.closed
             i.fas.fa-book-open.fa-lg
           - else
