--- a/app/views/users/show.html.slim
+++ b/app/views/users/show.html.slim
@@ -43,6 +43,7 @@
             = image_tag(post.image.url)
           - else
             = image_tag("no_image_book.jpg")
+          / リレーの状態
           - unless post.closed
             i.fas.fa-book-open.fa-lg
           - else
@@ -58,6 +59,7 @@
             = image_tag(post.image.url)
           - else
             = image_tag("no_image_book.jpg")
+          / リレーの状態
           - unless post.closed
             i.fas.fa-book-open.fa-lg
           - else
