fix: ここは大事

--- a/app/views/home/top.html.slim
+++ b/app/views/home/top.html.slim
@@ -82,6 +82,11 @@ section.top-container
           p.top-post-link = link_to "詳細をみる", post
 
 css:
+  /* icon */
+  .fas {
+    padding: 2% 0;
+  }
+
   .top-container {
     margin-left: 8%;
     margin-right: 8%;
