--- a/app/views/posts/_form.html.slim
+++ b/app/views/posts/_form.html.slim
@@ -12,6 +12,16 @@
       = f.text_field :title, class: 'form-control'
 
     .field.post-field
+      = f.label :genre
+      br
+      = f.collection_select :genre_ids, Genre.all, :id, :name,
+                                  { include_blank: true, selected: '' },
+                                  include_hidden: false do |b|
+        .check-box
+          = b.check_box
+          = b.label { b.text }
+
+    .field.post-field
       = f.label :story
       br
       = f.text_area :story, class: 'form-control'
