feat: post_genreをviewで表示したげる

--- a/app/views/posts/show.html.slim
+++ b/app/views/posts/show.html.slim
@@ -28,6 +28,9 @@
               i.far.fa-heart.icon-btn.not-like
           li = link_to "#" do
             i.fas.fa-external-link-alt
+    // ジャンルの表示
+    .post-genre
+      p = post_genre(@post)
     // あらすじ
     .post-desc
       h3 あらすじ 
