feat: ジャンルの色を付けたげる

--- a/app/views/posts/show.html.slim
+++ b/app/views/posts/show.html.slim
@@ -202,6 +202,14 @@ css:
     color: #0a9dd1;
   }
 
+  .post-genre p {
+    display: inline-block;
+    color: #fff;
+    background-color: #33cccc;
+    padding: 3px 11px;
+    border-radius: 7px;
+  }
+
   .post-desc {
     margin-top: 4%;
     margin-bottom: 2.5%;
