--- a/app/views/posts/show.html.slim
+++ b/app/views/posts/show.html.slim
@@ -204,10 +204,11 @@ css:
 
   .post-genre p {
     display: inline-block;
-    color: #fff;
+    color: rgb(244, 244, 244);
     background-color: #33cccc;
     padding: 3px 11px;
     border-radius: 7px;
+    font-size: 0.92rem;
   }
 
   .post-desc {
