feat: RELIER -> リライア

--- a/app/views/home/top.html.slim
+++ b/app/views/home/top.html.slim
@@ -5,7 +5,7 @@ section.bg-top
     .top-header
       // headerロゴ
       .top-header-logo
-        h1 = link_to "RELIER", root_path
+        h1 = link_to "リライア", root_path
       // headerリスト
       .top-header-list
         ul
