--- a/app/views/static/lp.html.slim
+++ b/app/views/static/lp.html.slim
@@ -1,4 +1,4 @@
-= provide(:title, 'RELIERについて')
+= provide(:title, 'リライアについて')
 
 section.bg-lp
   .lp-container
@@ -8,7 +8,7 @@ br
 br
 section.lp-welcome
   .lp-welcome-title.lp-title
-    h3 RELIERへようこそ
+    h3 リライアへようこそ
   .lp-welcome-content
     p この度はRELIER（リライア）にお越しいただきありがとうございます。<br>
       このサイトでは「1行小説リレー」というものを遅べます。<br>
@@ -32,21 +32,21 @@ section.lp-main
         img src="#"
       .main-content-p
         h4 小説を読む
-        p RELIERでは、アカウントを持っている全てのユーザーが「読者」です。<br>
+        p リライアでは、アカウントを持っている全てのユーザーが「読者」です。<br>
           あなたが気になったタイトルの小説を開いて読んでみましょう。
     .lp-main-content
       .main-content-img
         img src="#"
       .main-content-p
         h4 Likeを押す
-        p RELIERでは、アカウントを持っている全てのユーザーが「レビュワー」です。<br>
+        p リライアでは、アカウントを持っている全てのユーザーが「レビュワー」です。<br>
           あなたが気に入ったタイトルをLikeで推しましょう。
     .lp-main-content
       .main-content-img
         img src="#"
       .main-content-p
         h4 シナリオを作る
-        p RELIERでは、アカウントを持っている全てのユーザーが「著者」です。<br>
+        p リライアでは、アカウントを持っている全てのユーザーが「著者」です。<br>
           あなたが気になったタイトルの小説を開いてみましょう。<br>
           そして、その先のシナリオを進めるのは、あなた。<br>
           あなたが望んだシナリオを1行だけ追加しましょう。
