--- a/app/views/layouts/_footer.html.slim
+++ b/app/views/layouts/_footer.html.slim
@@ -5,7 +5,7 @@ footer
     .footer-list
       ul
         li 
-          p.footer-ap-name RELIER
+          p.footer-ap-name リライア
         li
           p.copylight &copy; 2020 Milkyway All Rights Reserved. 
 
