--- a/app/views/home/top.html.slim
+++ b/app/views/home/top.html.slim
@@ -1,4 +1,4 @@
-= provide(:title, "")
+= provide(:title, "リライア - 1行小説リレーサイト")
 
 section.bg-top
   .top-container
@@ -100,6 +100,7 @@ css:
 
   .top-header-logo h1 a {
     font-size: 1.75rem;
+    font-family: "Sawarabi Mincho";
     color: #fff;
   }
 
