--- a/app/views/layouts/_footer.html.slim
+++ b/app/views/layouts/_footer.html.slim
@@ -35,6 +35,7 @@ css:
   }
 
   .footer-list ul li .footer-ap-name {
+    font-family: "Sawarabi Mincho";
     font-weight: bold;
     font-size: 1.125rem;
   }
