--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -11,6 +11,7 @@ html
     link href="https://fonts.googleapis.com/css?family=Sawarabi+Gothic" rel="stylesheet"
     link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet"
     link href="https://fonts.googleapis.com/css?family=Sawarabi+Mincho" rel="stylesheet"
+    link href="https://fonts.googleapis.com/earlyaccess/nicomoji.css" rel="stylesheet"
   body
     - unless current_page?(root_path)
       = render 'layouts/header'
