--- a/app/views/articles/index.html.slim
+++ b/app/views/articles/index.html.slim
@@ -4,7 +4,7 @@
   .article-main-contents
     .top-title.title
       h2 ニュース一覧
-    .top-contents
+    .top-article-contents
       ul
         - @articles.each do |article|
           li = link_to article do
@@ -27,5 +27,65 @@ css:
     flex-direction: column;
     overflow-y: scroll;
     height: 580px;
+  }
+
+  .top-title {
+    margin-top: 2%;
+    text-align: center;
+  }
+
+  .top-title h2 {
+    font-size: 1.4rem;
+  }
+
+    .top-article-contents ul {
+    margin-top: 3%;
+    margin-left: 80px;
+    padding-right: 20%;
+    width: 100%;
+  }
+
+  .top-article-contents ul li a {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: flex-start;
+    margin-top: 2.5%;
+  }
+
+  .top-article-contents ul li a p {
+    margin-left: 22px;
+    font-size: 1.05rem;
+  }
+
+  .top-article-contents ul li a .date {
+    color: #333;
+  }
+
+  .top-article-contents ul li a .label {
+    font-size: 0.79rem;
+    margin-top: 2px;
+    color: rgb(249, 249, 249);
+  }
+
+  .top-article-contents ul li a .update {
+    background-color: #A16EFF;
+    border-radius: 7px;
+    padding: 2px 4px;
+  }
+
+  .top-article-contents ul li a .notice {
+    background-color: #FF773E;
+    border-radius: 7px;
+    padding: 2px 16px;
+  }
+
+  .top-article-contents ul li a .other {
+    background-color: #5D99FF;
+    border-radius: 7px;
+    padding: 2px 22px;
+  }
+
+  .top-article-contents ul li a .title {
+    margin-top: 0.8px;
   }
 
