--- a/app/views/articles/index.html.slim
+++ b/app/views/articles/index.html.slim
@@ -38,8 +38,9 @@ css:
     font-size: 1.4rem;
   }
 
-    .top-article-contents ul {
+  .top-article-contents ul {
     margin-top: 3%;
+    margin-bottom: 3%;
     margin-left: 80px;
     padding-right: 20%;
     width: 100%;
@@ -89,3 +90,43 @@ css:
     margin-top: 0.8px;
   }
 
+  @media screen and (max-width: 480px) {
+    .article-index-top {
+      padding-top: 9%;
+      padding-bottom: 6%;
+      padding-left: 9%;
+      padding-right: 9%;
+    }
+
+    .article-main-contents {
+      height: 600px;
+    }
+
+    .top-title {
+      margin-top: 6%;
+      margin-bottom: 8%;
+    }
+
+    .top-title h2 {
+      font-size: 1.2rem;
+    }
+
+    .top-article-contents ul {
+      margin-bottom: 12%;
+      margin-left: 12px;
+      padding-right: 0;
+    }
+
+    .top-article-contents ul li a {
+      margin-top: 5%;
+    }
+
+    .top-article-contents ul li a p {
+      margin-left: 44px;
+      font-size: .91rem;
+    }
+
+    .top-article-contents ul li a .label {
+      font-size: 0.7rem;
+    }
+  }
