feat: 提供元の変更

--- a/app/views/layouts/_footer.html.slim
+++ b/app/views/layouts/_footer.html.slim
@@ -1,13 +1,13 @@
 footer
   .footer
     .footer-copo-name
-      h3 Milkyway
+      h3 Ralumina
     .footer-list
       ul
         li 
           p.footer-ap-name リライア
         li
-          p.copylight &copy; 2020 Milkyway All Rights Reserved. 
+          p.copylight &copy; 2021 Ralumina All Rights Reserved. 
 
 css:
   footer {
