--- a/app/views/layouts/_header.html.slim
+++ b/app/views/layouts/_header.html.slim
@@ -7,7 +7,7 @@ header
         li = link_to "マイページ", user_path(current_user)
         li = link_to "設定", '#'
         li = link_to "ヘルプ", '#'
-        / li = link_to "ログアウト", destroy_user_session_path, method: :delete, data: { confirm: 'ログアウトしますか?' }
+        li = link_to "ログアウト", destroy_user_session_path, method: :delete, data: { confirm: 'ログアウトしますか?' }
       - else
         li = link_to "サインイン", new_user_session_path
         li = link_to "はじめての方へ", '#'
@@ -35,6 +35,6 @@ css:
 
   .header-list ul li a{
     font-weight: bold;
-    font-size: 0.92rem;
+    font-size: 0.97rem;
     margin-left: 26px;
   }
