--- a/app/views/posts/show.html.slim
+++ b/app/views/posts/show.html.slim
@@ -157,7 +157,7 @@ css:
   }
 
   .post-show-top {
-    background-color: rgb(244, 244, 244);
+    background-color: #f4f4f4;
     padding-top: 1.3%;
     padding-bottom: 13%;
     display: flex;
