--- a/app/views/articles/show.html.slim
+++ b/app/views/articles/show.html.slim
@@ -14,7 +14,7 @@
 
 css:
   .article-show-top {
-    background-color: rgb(244, 244, 244);
+    background-color: #f4f4f4;
     padding-top: 5%;
     padding-bottom: 25%;
     padding-left: 18%;
