--- a/app/views/posts/show.html.slim
+++ b/app/views/posts/show.html.slim
@@ -683,6 +683,10 @@ css:
       height: 29px;
       font-size: .85rem;
     }
+
+    .novel-form input[type="submit"] {
+      
+    }
     
     .post-order {
       margin-top: 10%;
