feat: posts#showページのボタンがいいじゃん

--- a/app/views/posts/show.html.slim
+++ b/app/views/posts/show.html.slim
@@ -385,6 +385,19 @@ css:
     font-size: .75rem;
   }
 
+  .novel-form input[type="submit"] {
+    background-color: #149cfc;
+    padding: 3px 16px;
+    color: #fdfdfd;
+    border-radius: 26px;
+    transition: .3s;
+  }
+
+  .novel-form input[type="submit"]:hover {
+    transition: .3s;
+    background-color: #2494e4;
+  }
+
   .novel-post-closed {
     margin: 8% 3%;
     color: #ff6666;
@@ -549,7 +562,22 @@ css:
     margin-top: 2%;
     height: 22px;
     font-size: 0.85rem;
+    width: 78%;
     color: #444;
+  }
+
+  .free-form input[type="submit"] {
+    margin-left: 3%;
+    background-color: #149cfc;
+    padding: 3px 16px;
+    color: #fdfdfd;
+    border-radius: 26px;
+    transition: .3s;
+  }
+
+  .free-form input[type="submit"]:hover {
+    transition: .3s;
+    background-color: #2494e4;
   }
 
   @media screen and (max-width: 480px) {
@@ -682,10 +710,6 @@ css:
     .novel-form input[type="text"] {
       height: 29px;
       font-size: .85rem;
-    }
-
-    .novel-form input[type="submit"] {
-      
     }
     
     .post-order {
