feat: posts#showのデザイン

--- a/app/views/posts/show.html.slim
+++ b/app/views/posts/show.html.slim
@@ -164,9 +164,9 @@ css:
   }
 
   .post-main-contents {
-    margin-left: 15%;
-    padding-left: 18%;
-    padding-right: 4%;
+    width: 65%;
+    padding-left: 19%;
+    margin-left: 10%;
     background-color: #fff;
   }
 
@@ -185,12 +185,12 @@ css:
   }
 
   .post-add-status ul {
-    margin-left: 41%;
+    margin-left: 30%;
     display: flex;
   }
 
   .post-add-status ul li {
-    margin-left: 6%;
+    margin-left: 4%;
   }
 
   .post-add-status ul li a {
@@ -264,17 +264,15 @@ css:
   }
 
   .post-add-contents {
-    margin-left: -20%;
-    padding-left: -18%;
-    padding-right: -18%;
-    margin-bottom: 11%;
+    margin-left: -30%;
+    margin-bottom: 12%;
     display: flex;
     height: auto;
   }
 
   .post-log {
-    width: 255px;
-    height: 300px;
+    width: 42%;
+    height: 330px;
     overflow-y: scroll;
     margin: 5px; 
     padding: 10px;
@@ -356,8 +354,8 @@ css:
 
   .post-add {
     margin-left: 3%;
-    width: 255px;
-    height: 300px;
+    width: 42%;
+    height: 330px;
     overflow-y: scroll;
     margin: 5px; 
     padding: 10px;
@@ -380,12 +378,13 @@ css:
   }
 
   .novel-form input[type="text"] {
-    width: 242px;
+    width: 72%;
     height: 25px;
     font-size: .75rem;
   }
 
   .novel-form input[type="submit"] {
+    margin-left: 2%;
     background-color: #149cfc;
     padding: 3px 16px;
     color: #fdfdfd;
@@ -417,14 +416,16 @@ css:
   .post-order p {
     font-size: .85rem;
     margin-top: 2%;
-    color: #333;
+    color: #666;
   }
 
   .post-order .column {
     font-size: .9rem;
+    color: #333;
   }
 
   .post-sub-contents {
+    width: 35%;
     margin-left: 2%;
   }
 
@@ -478,7 +479,7 @@ css:
 
   .free-post-log {
     margin-left: 3%;
-    width: 340px;
+    width: 330px;
     height: 300px;
     overflow-y: scroll;
     margin: 5px;
@@ -587,6 +588,7 @@ css:
     }
     
     .post-main-contents {
+      width: 100%;
       margin-left: 7%;
       margin-right: 7%;
       padding-left: 5%;
